@@ -698,26 +698,6 @@ if|if
 condition|(
 name|q
 operator|instanceof
-name|TermQuery
-condition|)
-block|{
-name|maxTerms
-operator|=
-name|Math
-operator|.
-name|max
-argument_list|(
-literal|1
-argument_list|,
-name|maxTerms
-argument_list|)
-expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|q
-operator|instanceof
 name|BooleanQuery
 condition|)
 block|{
@@ -741,6 +721,20 @@ argument_list|()
 operator|.
 name|size
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|maxTerms
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+literal|1
+argument_list|,
+name|maxTerms
 argument_list|)
 expr_stmt|;
 block|}
