@@ -164,6 +164,22 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|queryparser
+operator|.
+name|util
+operator|.
+name|QueryParserTestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|BooleanClause
@@ -2354,6 +2370,158 @@ name|parse
 argument_list|(
 literal|"/[a-z][123]/"
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** whitespace+lowercase analyzer with synonyms (dogs,dog) and (guinea pig,cavy) */
+DECL|class|MockSynonymAnalyzer
+specifier|private
+class|class
+name|MockSynonymAnalyzer
+extends|extends
+name|Analyzer
+block|{
+annotation|@
+name|Override
+DECL|method|createComponents
+specifier|public
+name|TokenStreamComponents
+name|createComponents
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+name|Tokenizer
+name|tokenizer
+init|=
+operator|new
+name|MockTokenizer
+argument_list|(
+name|MockTokenizer
+operator|.
+name|WHITESPACE
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+return|return
+operator|new
+name|TokenStreamComponents
+argument_list|(
+name|tokenizer
+argument_list|,
+operator|new
+name|MockSynonymFilter
+argument_list|(
+name|tokenizer
+argument_list|)
+argument_list|)
+return|;
+block|}
+block|}
+DECL|method|testSynonyms
+specifier|public
+name|void
+name|testSynonyms
+parameter_list|()
+throws|throws
+name|ParseException
+block|{
+name|String
+index|[]
+name|fields
+init|=
+block|{
+literal|"b"
+block|,
+literal|"t"
+block|}
+decl_stmt|;
+name|MultiFieldQueryParser
+name|parser
+init|=
+operator|new
+name|MultiFieldQueryParser
+argument_list|(
+name|fields
+argument_list|,
+operator|new
+name|MockSynonymAnalyzer
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Query
+name|q
+init|=
+name|parser
+operator|.
+name|parse
+argument_list|(
+literal|"dogs"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Synonym(b:dog b:dogs) Synonym(t:dog t:dogs)"
+argument_list|,
+name|q
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|q
+operator|=
+name|parser
+operator|.
+name|parse
+argument_list|(
+literal|"guinea pig"
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|parser
+operator|.
+name|getSplitOnWhitespace
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"(Synonym(b:cavy b:guinea) Synonym(t:cavy t:guinea)) (b:pig t:pig)"
+argument_list|,
+name|q
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|parser
+operator|.
+name|setSplitOnWhitespace
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|q
+operator|=
+name|parser
+operator|.
+name|parse
+argument_list|(
+literal|"guinea pig"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"(b:guinea t:guinea) (b:pig t:pig)"
+argument_list|,
+name|q
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
